@@ -1,5 +1,7 @@
 2021-03-24  Mark Galassi  <mark@galassi.org>
 
+	* entropy_simple_example.py: cleaned up and improved output.
+
 	* entropy_simple_example.py: new program to give a simple
 	description of entropy.
 
